@@ -1,4 +1,0 @@
-GtkWidget *ipaqscreen_Build_Objects();
-void ipaqscreen_Free_Objects();
-void ipaqscreen_Save();
-void ipaqscreen_Restore();
